--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,9 @@
     "eslint": "^8.33.0",
     "eslint-plugin-react": "^7.32.2",
     "vite": "^4.0.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
